[package]
name = "hello-wasm-acejs"
version = "0.1.0"
authors = ["Xu Kang"]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/acejs/hello-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = '0.2'
